examples/ex3/test_cases/failing/check17_while_is_called_with_int.java
class Main {
    public static void main(String[] a) { 
        System.out.println(3);
    }
}

class Simple {

    public int func() {
        int num;

        num = 5;

        while (num) {
            num = 6;
        }

        return 0;
    }
}